# System

./: CMakeLists.txt
examples/: CMakeLists.txt  pair.cpp  stream_client.cpp  stream_server.cpp
include/system/: execute.hpp
include/system/ipc/: basic_endpoint.hpp  datagram.hpp  message_queue.hpp  pair.hpp  stream.hpp
